--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-svg": "15.8.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "@shopify/react-native-skia": "1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
