--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "@expo-google-fonts/manrope": "^0.3.0",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.1.2",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@shopify/react-native-skia": "1.5.0",
     "axios": "^1.8.4",
-    "expo": "^52.0.44",
+    "expo": "^52.0.46",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
@@ -33,7 +33,7 @@
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
     "expo-sensors": "~14.0.2",
-    "expo-splash-screen": "~0.29.22",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
