--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@shopify/react-native-skia": "v2.0.0-next.2",
+    "@shopify/react-native-skia": "v2.0.0-next.4",
     "axios": "^1.8.4",
-    "expo": "^53.0.6",
+    "expo": "53.0.9",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.5",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
-    "expo-router": "~5.0.5",
+    "expo-router": "~5.0.6",
     "expo-sensors": "~14.1.4",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -59,7 +59,7 @@
     "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.4",
+    "jest-expo": "~53.0.5",
     "react-test-renderer": "18.3.1",
     "typescript": "~5.8.3"
   },
