--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.6",
+    "expo-secure-store": "~14.2.3",
     "expo-sensors": "~14.1.4",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -51,7 +52,7 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "expo-secure-store": "~14.2.3"
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
