--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.4"
+    "zustand": "^5.0.4",
+    "expo-image": "~2.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
