--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/material-top-tabs": "^7.2.13",
     "@react-navigation/native": "^7.0.14",
     "@shopify/react-native-skia": "v2.0.0-next.4",
     "axios": "^1.8.4",
@@ -30,6 +31,7 @@
     "expo-constants": "~17.1.5",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
+    "expo-image": "~2.1.7",
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.6",
@@ -45,27 +47,28 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-pager-view": "^6.8.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
+    "react-native-tab-view": "^4.1.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.4",
-    "expo-image": "~2.1.7"
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
+    "eslint": "^9.0.0",
+    "eslint-config-expo": "~9.2.0",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
     "react-test-renderer": "18.3.1",
-    "typescript": "~5.8.3",
-    "eslint": "^9.0.0",
-    "eslint-config-expo": "~9.2.0"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
