feat: add new navigation routes for book summary and chat, enhance ListFull component with editing capabilities, and update API authentication methods for improved token management; refactor list store for better state handling and integrate new dependencies for enhanced functionality

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@ai-sdk/react": "^1.2.12",
     "@expo-google-fonts/manrope": "^0.3.0",
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^5.1.2",
