--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.4"
+    "zustand": "^5.0.4",
+    "expo-localization": "~16.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
