--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@ai-sdk/react": "^1.2.12",
     "@expo-google-fonts/manrope": "^0.3.0",
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^5.1.2",
@@ -27,40 +26,40 @@
     "@react-navigation/native": "^7.0.14",
     "@shopify/react-native-skia": "v2.0.0-next.4",
     "axios": "^1.8.4",
-    "expo": "53.0.9",
+    "expo": "53.0.20",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.5",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.7",
+    "expo-image": "~2.4.0",
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
-    "expo-router": "~5.0.6",
+    "expo-localization": "~16.1.6",
+    "expo-router": "~5.1.4",
     "expo-secure-store": "~14.2.3",
     "expo-sensors": "~14.1.4",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
-    "expo-web-browser": "~14.1.6",
-    "lucide-react-native": "^0.487.0",
+    "expo-web-browser": "~14.2.0",
+    "lucide-react-native": "^0.539.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.5",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-pager-view": "^6.8.0",
+    "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-tab-view": "^4.1.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.4",
-    "expo-localization": "~16.1.6"
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -71,7 +70,7 @@
     "eslint-config-expo": "~9.2.0",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
   },
   "private": true
