--- a/app.json
+++ b/app.json
@@ -1,22 +1,26 @@
 {
   "expo": {
-    "name": "trackr-front-mobile",
-    "slug": "trackr-front-mobile",
+    "name": "Trackr",
+    "slug": "trackr",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "trackr",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.ted.trackr.app",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.trackr.app"
+      "package": "com.ted.trackr.app"
     },
     "web": {
       "bundler": "metro",
@@ -41,6 +45,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "cfd445c1-f20e-42e0-b2f6-cb5eb3e68eab"
+      }
     }
   }
 }
