--- a/package.json
+++ b/package.json
@@ -16,63 +16,65 @@
   },
   "dependencies": {
     "@expo-google-fonts/manrope": "^0.3.0",
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/metro-runtime": "~6.1.2",
+    "@expo/vector-icons": "^15.0.2",
     "@gorhom/bottom-sheet": "^5.1.2",
     "@legendapp/list": "^1.0.7",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/material-top-tabs": "^7.2.13",
     "@react-navigation/native": "^7.0.14",
-    "@shopify/react-native-skia": "v2.0.0-next.4",
+    "@shopify/react-native-skia": "2.2.12",
     "@somesoap/react-native-image-palette": "^1.2.2",
     "axios": "^1.8.4",
-    "expo": "53.0.20",
-    "expo-blur": "~14.1.4",
-    "expo-constants": "~17.1.5",
-    "expo-font": "~13.3.1",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.4.0",
-    "expo-image-picker": "^16.1.4",
-    "expo-linear-gradient": "~14.1.4",
-    "expo-linking": "~7.1.4",
-    "expo-localization": "~16.1.6",
-    "expo-router": "~5.1.4",
-    "expo-secure-store": "~14.2.3",
-    "expo-sensors": "~14.1.4",
-    "expo-splash-screen": "~0.30.8",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.7",
-    "expo-web-browser": "~14.2.0",
+    "expo": "^54.0.9",
+    "expo-blur": "~15.0.7",
+    "expo-constants": "~18.0.9",
+    "expo-font": "~14.0.8",
+    "expo-haptics": "~15.0.7",
+    "expo-image": "~3.0.8",
+    "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-localization": "~17.0.7",
+    "expo-router": "~6.0.7",
+    "expo-secure-store": "~15.0.7",
+    "expo-sensors": "~15.0.7",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.7",
+    "expo-web-browser": "~15.0.7",
     "lucide-react-native": "^0.539.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-draggable-flatlist": "^4.0.3",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-pager-view": "6.7.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-pager-view": "6.9.1",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-tab-view": "^4.1.0",
     "react-native-toast-message": "^2.2.1",
-    "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "@types/react-test-renderer": "^18.3.0",
     "eslint": "^9.0.0",
-    "eslint-config-expo": "~9.2.0",
+    "eslint-config-expo": "~10.0.0",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.5",
+    "jest-expo": "~54.0.12",
     "react-test-renderer": "19.0.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
