move from zustand for most to tanstack query

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@react-navigation/native": "^7.0.14",
     "@shopify/react-native-skia": "2.2.12",
     "@somesoap/react-native-image-palette": "^1.2.2",
+    "@tanstack/react-query": "^5.89.0",
+    "@tanstack/react-query-devtools": "^5.89.0",
     "axios": "^1.8.4",
     "expo": "^54.0.9",
     "expo-blur": "~15.0.7",
