--- a/package.json
+++ b/package.json
@@ -73,8 +73,11 @@
     "@types/react-test-renderer": "^18.3.0",
     "eslint": "^9.0.0",
     "eslint-config-expo": "~10.0.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "jest": "^29.2.1",
     "jest-expo": "~54.0.12",
+    "prettier": "^3.6.2",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.9.2"
   },
