--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
+    "i18next": "^25.5.2",
     "lucide-react-native": "^0.539.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^16.0.0",
     "react-native": "0.81.4",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.28.0",
