--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-query-devtools": "^5.89.0",
     "axios": "^1.8.4",
+    "dayjs": "^1.11.18",
+    "dayjs-plugin-utc": "^0.1.2",
     "expo": "^54.0.9",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
