--- a/package.json
+++ b/package.json
@@ -65,10 +65,10 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-tab-view": "^4.1.0",
-    "react-native-toast-message": "^2.2.1",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
+    "sonner-native": "^0.21.1",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
