--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@ai-sdk/react": "^2.0.76",
     "@expo-google-fonts/manrope": "^0.3.0",
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
@@ -29,6 +30,7 @@
     "@somesoap/react-native-image-palette": "^1.2.2",
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-query-devtools": "^5.89.0",
+    "ai": "^5.0.76",
     "axios": "^1.8.4",
     "dayjs": "^1.11.18",
     "dayjs-plugin-utc": "^0.1.2",
