--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/material-top-tabs": "^7.2.13",
     "@react-navigation/native": "^7.0.14",
+    "@ronradtke/react-native-markdown-display": "^8.1.0",
     "@shopify/react-native-skia": "2.2.12",
     "@somesoap/react-native-image-palette": "^1.2.2",
     "@tanstack/react-query": "^5.89.0",
@@ -52,7 +53,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
+    "expo-web-browser": "~15.0.8",
     "i18next": "^25.5.2",
     "lucide-react-native": "^0.539.0",
     "react": "19.1.0",
