--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "sonner-native": "^0.21.1",
+    "victory-native": "^41.20.2",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
