--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-pager-view": "6.9.1",
+    "react-native-purchases": "^9.6.8",
+    "react-native-purchases-ui": "^9.6.8",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
