--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-i18next": "^16.0.0",
     "react-native": "0.81.4",
     "react-native-draggable-flatlist": "^4.0.3",
+    "react-native-fast-confetti": "^1.1.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-pager-view": "6.9.1",
     "react-native-purchases": "^9.6.8",
