--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@expo/vector-icons": "^15.0.2",
     "@gorhom/bottom-sheet": "^5.2.6",
     "@legendapp/list": "^1.0.7",
+    "@lodev09/react-native-true-sheet": "^3.0.4",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -37,6 +38,7 @@
     "dayjs-plugin-utc": "^0.1.2",
     "expo": "^54.0.9",
     "expo-blur": "~15.0.7",
+    "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-glass-effect": "~0.1.4",
