feat: update app theme with new background colors for light and dark modes, enhance splash screen options with fade effect, and improve accessibility labels in the Discover tab for better user experience

--- a/app.json
+++ b/app.json
@@ -37,7 +37,10 @@
           "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#fcfcfc",
+          "dark": {
+            "backgroundColor": "#0a0a0a"
+          }
         }
       ],
       "expo-font",
