--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "expo": "^54.0.9",
     "expo-blur": "~15.0.7",
     "expo-clipboard": "~8.0.7",
-    "expo-constants": "~18.0.9",
+    "expo-constants": "~18.0.12",
+    "expo-device": "~8.0.10",
     "expo-font": "~14.0.8",
     "expo-glass-effect": "~0.1.4",
     "expo-haptics": "~15.0.7",
@@ -49,6 +50,7 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-localization": "~17.0.7",
+    "expo-notifications": "~0.32.15",
     "expo-router": "~6.0.7",
     "expo-secure-store": "~15.0.7",
     "expo-sensors": "~15.0.7",
