--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "dayjs": "^1.11.18",
     "dayjs-plugin-utc": "^0.1.2",
     "expo": "^54.0.9",
+    "expo-application": "~7.0.8",
     "expo-blur": "~15.0.7",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.12",
     "expo-device": "~8.0.10",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.8",
     "expo-glass-effect": "~0.1.4",
     "expo-haptics": "~15.0.7",
@@ -61,6 +63,8 @@
     "expo-web-browser": "~15.0.8",
     "i18next": "^25.5.2",
     "lucide-react-native": "^0.539.0",
+    "posthog-react-native": "^4.23.0",
+    "posthog-react-native-session-replay": "^1.2.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-i18next": "^16.0.0",
