fix: pre-beta security and quality improvements
CRITICAL:
- Move PostHog API key to EXPO_PUBLIC_POSTHOG_KEY env var
- Move RevenueCat API key to EXPO_PUBLIC_REVENUECAT_KEY env var
- Add .env to .gitignore to prevent secret exposure
- Update .env.example with all required env vars (no secrets)

HIGH:
- Implement ToS/Privacy links in signup (opens trackrr.app/terms and /privacy)
- Guard all console.log/warn/error with __DEV__ checks in:
  - hooks/usePushNotifications.ts
  - contexts/SubscriptionContext.tsx
  - services/api/index.ts
- Add error logging to silent catches in:
  - stores/trackedBookStore.ts (togglePinInLibrary)
  - contexts/AuthContext.tsx (server logout)
- Add error state UI to chat screen

MEDIUM:
- Add .catch() to promise chains missing error handling

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 # API Configuration
 EXPO_PUBLIC_API_URL=http://localhost:3333
+
+# PostHog Analytics
+EXPO_PUBLIC_POSTHOG_KEY=
+
+# RevenueCat Subscriptions
+EXPO_PUBLIC_REVENUECAT_KEY=
